Sección 03: Backend - Eureka Server.
Descripción y/o Comentarios: Se realiza la creación y configuración de la puerta de enlace (servidor Zuul Gateway).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Nombre de la Aplicación.
+spring.application.name=microservicio-zuul-server
 
+# Puerto que se usa por default para en el API Gateway.
+server.port=8090
+
+# Configuración de la ruta de Eureka, la ruta donde se va a ir a comunicar.
+# Esto se hace cuando el servidor de eureka está en otro lugar que el cliente, caso contrario eureka ya mapea automáticamente a localhost.
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# MS al que le vamos a dar una ruta
+zuul.routes.usuarios.service-id=microservicio-usuarios
+# Pre-ruta del MS o Prefijo en la ruta.
+zuul.routes.usuarios.path=/api/usuarios/**
