Sección 4: Backend - MS Cursos.
Descripción y/o Comentarios: Se agrega el MS cursos al ecosistema de micro-servicios.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,10 @@ server.port=8090
 # Esto se hace cuando el servidor de eureka está en otro lugar que el cliente, caso contrario eureka ya mapea automáticamente a localhost.
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-# MS al que le vamos a dar una ruta
+# MS a los que se les da una puerta de enlace al ecosistema de microservicios
 zuul.routes.usuarios.service-id=microservicio-usuarios
-# Pre-ruta del MS o Prefijo en la ruta.
-zuul.routes.usuarios.path=/api/usuarios/**
+zuul.routes.cursos.service-id=microservicio-cursos
+
+# Pre-ruta de los MS o Prefijos de las rutas.
+zuul.routes.usuarios.path=/api/users/**
+zuul.routes.cursos.path=/api/courses/**
